--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -14,21 +14,19 @@
 
         <div>
             {% if categories %}
-
-            <ul>
+                <ul>
                 {% for category in categories %}
-                <li>{{ category.name }}</li>
+                    <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
                 {% endfor %}
-            </ul>
-                {% else %}
+                </ul>
+            {% else %}
                 <strong>There are no categories present.</strong>
-                {% endif %}
+            {% endif %}
         </div>
 
         <div>
             <a href="/rango/about/">About Rango</a><br />
-            <img src="{% static "images/rango.jpg" %}"
-            alt="Picture of Rango" />
+            <img src="{% static 'images/rango.png' %}" alt="Picture of Rango" />
         </div>
 
     </body>
