--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -13,6 +13,7 @@
         </div>
 
         <div>
+            <h2>Most Viewed Categories</h2>
             {% if categories %}
                 <ul>
                 {% for category in categories %}
@@ -21,6 +22,19 @@
                 </ul>
             {% else %}
                 <strong>There are no categories present.</strong>
+            {% endif %}
+        </div>
+
+        <div>
+            <h2>Most Viewed Pages</h2>
+            {% if pages %}
+                <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+                </ul>
+            {% else %}
+                <strong>There are no pages present.</strong>
             {% endif %}
         </div>
 
